@@ -1,6 +1,5 @@
 #include "CoreFoundation/CFString.h"
 #include "CoreFoundation/CFLocale.h"
-#include "Testing.h"
 #include "../CFTesting.h"
 
 int main (void)
